refactor N5Client by pulling out ByteRenderer into its own standalone class